--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="sticker">преимущества</div>
 			<h2 class="title">8 причин начать работать с нами</h2>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_card_icon.png" alt="uber_card" class="advantages_icon">
@@ -77,7 +77,7 @@
 						<div class="advantages_descr"><span>Никаких наличных, оплата происходитавтоматически</span><br> Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_bonus_icon.png" alt="uber_bonus" class="advantages_icon">
@@ -85,7 +85,7 @@
 						<div class="advantages_descr"><span>Комиссия 8% + БОНУСЫ</span><br> У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_cash_icon.png" alt="uber_cash" class="advantages_icon">
@@ -93,7 +93,7 @@
 						<div class="advantages_descr"><span>Высокий доход с гарантированными выплатами</span><br> Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_schedule_icon.png" alt="uber_schedule" class="advantages_icon">
@@ -101,7 +101,7 @@
 						<div class="advantages_descr"><span>Работа в удобное время, никаких графиков</span><br> Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-тывать только утром, вечером, в выходные или праздничные дни! </div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_key_icon.png" alt="uber_key" class="advantages_icon">
@@ -109,7 +109,7 @@
 						<div class="advantages_descr"><span>Комфортное, прозрачное и простоеподключение</span><br> Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_geo_icon.png" alt="uber_geo" class="advantages_icon">
@@ -117,7 +117,7 @@
 						<div class="advantages_descr"><span>Всегда большое количество заказов</span><br> Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_24_7_icon.png" alt="uber_24_7" class="advantages_icon">
@@ -125,7 +125,7 @@
 						<div class="advantages_descr"><span>Круглосуточная поддержка</span><br> В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_sticker_icon.png" alt="uber_sticker" class="advantages_icon">
@@ -143,37 +143,37 @@
 			<div class="title">мобильное приложение убер</div>
 			<div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_1">
 						<div class="mobile_item_title">оформление заказа одним касанием</div>
 						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_2">
 						<div class="mobile_item_title">надежная подача</div>
 						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_3">
 						<div class="mobile_item_title">прозрачные цены</div>
 						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_4">
 						<div class="mobile_item_title">безналичная оплата</div>
 						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_5">
 						<div class="mobile_item_title">обратная связь</div>
 						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<div class="mobile_item mobile_item_6">
 						<div class="mobile_item_title">разделить стоимость поездки</div>
 						<div class="mobile_item_plus"></div>
@@ -316,22 +316,6 @@
 		<div class="footer_wrapper">
 			<!-- Если не оборачивать каждый блок в обертку - получится криво -->
 			<div>
-				<div class="footer_social">
-					<a href="#" class="footer_social_item">
-						<i class="fab fa-facebook-f"></i>
-					</a>
-					<a href="#" class="footer_social_item">
-						<i class="fab fa-twitter"></i>
-					</a>
-					<a href="#" class="footer_social_item">
-						<i class="fab fa-linkedin"></i>
-					</a>
-					<a href="#" class="footer_social_item">
-						<i class="fab fa-instagram"></i>
-					</a>
-				</div>
-			</div>
-			<div>
 				<div class="footer_links">
 					<div class="footer_links_main">
 						<a href="#">на главную</a>
@@ -346,6 +330,22 @@
 						<a href="#">о нас</a>
 					</div>
 					<a href="#" class="footer_links_lang">Русский</a>
+				</div>
+			</div>
+			<div>
+				<div class="footer_social">
+					<a href="#" class="footer_social_item">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+					<a href="#" class="footer_social_item">
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="#" class="footer_social_item">
+						<i class="fab fa-linkedin"></i>
+					</a>
+					<a href="#" class="footer_social_item">
+						<i class="fab fa-instagram"></i>
+					</a>
 				</div>
 			</div>
 			<div>
