--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
 	<header>
 		<nav>
 			<div class="container">
@@ -50,6 +51,7 @@
 			</div>
 		</div>
 	</header>
+
 	<section class="promo">
 		<div class="container">
 			<div class="row">
@@ -64,12 +66,13 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="advantages">
 		<div class="container">
 			<div class="sticker">преимущества</div>
 			<h2 class="title">8 причин начать работать с нами</h2>
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_card_icon.png" alt="uber_card" class="advantages_icon">
@@ -77,7 +80,7 @@
 						<div class="advantages_descr"><span>Никаких наличных, оплата происходитавтоматически</span><br> Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_bonus_icon.png" alt="uber_bonus" class="advantages_icon">
@@ -85,7 +88,7 @@
 						<div class="advantages_descr"><span>Комиссия 8% + БОНУСЫ</span><br> У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_cash_icon.png" alt="uber_cash" class="advantages_icon">
@@ -93,7 +96,7 @@
 						<div class="advantages_descr"><span>Высокий доход с гарантированными выплатами</span><br> Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_schedule_icon.png" alt="uber_schedule" class="advantages_icon">
@@ -101,7 +104,7 @@
 						<div class="advantages_descr"><span>Работа в удобное время, никаких графиков</span><br> Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-тывать только утром, вечером, в выходные или праздничные дни! </div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_key_icon.png" alt="uber_key" class="advantages_icon">
@@ -109,7 +112,7 @@
 						<div class="advantages_descr"><span>Комфортное, прозрачное и простоеподключение</span><br> Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_geo_icon.png" alt="uber_geo" class="advantages_icon">
@@ -117,7 +120,7 @@
 						<div class="advantages_descr"><span>Всегда большое количество заказов</span><br> Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_24_7_icon.png" alt="uber_24_7" class="advantages_icon">
@@ -125,7 +128,7 @@
 						<div class="advantages_descr"><span>Круглосуточная поддержка</span><br> В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
 					</div>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-12 col-md-6">
 					<div class="advantages_item">
 						<div class="advantages_round">
 							<img src="icon/advantages/uber_sticker_icon.png" alt="uber_sticker" class="advantages_icon">
@@ -193,7 +196,7 @@
 					<div class="col-md-8 offset-md-2">
 						<div class="car_wrapper">
 							<img src="img/car/uber_car.png" alt="uber_car" class="car_img">
-							<div class="subtitle">Машины на каждый день. <br>Лучше, быстрее и дешевле, чем такси</div>
+							Машины на каждый день. <br>Лучше, быстрее и дешевле, чем такси
 						</div>
 					</div>
 				</div>
@@ -202,21 +205,6 @@
 		<div class="car_bg2">
 		</div>
 	</section>
-
-	<!-- <section class="choice">
-		<div class="container">
-			<div class="black"></div>
-			<div class="label label_white">возможности</div>
-			<h2 class="title title_white">Выбор - отличная штука!</h2>
-			<div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-
-			<img src="img/car/uber_car.png" alt="uber car" class="choice_img">
-			<div class="choice_descr">
-				Машины на каждый день.<br>
-				Лучше, быстрее и дешевле, чем такси
-			</div>
-		</div>
-	</section> -->
 
 	<section class="condition">
 		<div class="container">
@@ -289,28 +277,6 @@
 		</div>
 	</section>
 
-	<!-- <footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 offset-md-4">
-					<div class="footer_line"></div>
-					<ul class="footer_list1">
-						<li><a href="#">на главную</a></li>
-						<li><a href="#">города</a></li>
-						<li><a href="#">для водителей</a></li>
-					</ul>
-					<ul class="footer_list2">
-						<li><a href="#">центр поддержки</a></li>
-						<li><a href="#">вакансии</a></li>
-						<li><a href="#">разработчики</a></li>
-						<li><a href="#">блог</a></li>
-						<li><a href="#">о нас</a></li>
-					</ul>
-					<div class="footer_language"><a href="#">русский</a></div>
-				</div>
-			</div>
-		</div>
-	</footer> -->
 	<footer>
 		<div class="footer_divider"></div>
 		<div class="footer_wrapper">
